genre, country and year filters
- feat: improve filter sliders
- feat: add genre filter
- feat: add country filter
- feat: add year filter
- feat: add genres, countries and filters translations

--- a/src/components/Filters/Filters.module.sass
+++ b/src/components/Filters/Filters.module.sass
@@ -1,6 +1,7 @@
 .filters
   display: grid
   grid-template-columns: 1fr 1fr 1fr
+  gap: 12px
   width: 100%
   background-color: #1f1b2e
   padding: 16px
