--- a/src/components/Filters/MultiSelector/SliderContent/SliderContent.module.sass
+++ b/src/components/Filters/MultiSelector/SliderContent/SliderContent.module.sass
@@ -16,6 +16,20 @@
     background-color: #7e798f
     border-color: #7e798f
 
+  &_onlytext
+    height: auto
+    padding: 8px 16px
+    border-radius: 32px
+
   &__icon
     width: 32px
     height: 32px
+
+  &__text
+    font-size: 13px
+    line-height: 16px
+    font-weight: 500
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
+    width: 100%
