--- a/src/components/Header/DropDown/TvDropDown/TvDropDown.module.sass
+++ b/src/components/Header/DropDown/TvDropDown/TvDropDown.module.sass
@@ -30,9 +30,7 @@
 
   &__slider
     &_row
-      overflow: hidden
-      margin: 0 -20px
-      padding: 24px 20px
+      padding-block: 24px
 
     &_title
       font-size: 15px
