rating, rating count and person filters
- feat: add rating filter
- feat: add ratings count filter
- feat: add actor and director inputs
- feat: add reset filters button
- fix: code style problems
- refactor: filter slider decomposition

--- a/src/components/Filters/MultiSelector/ListItem/ListItem.module.sass
+++ b/src/components/Filters/MultiSelector/ListItem/ListItem.module.sass
@@ -1,5 +1,5 @@
 .item
-  margin-top: 12px
+  padding-top: 12px
   display: flex
   justify-content: space-between
   font-size: 13px
@@ -8,7 +8,6 @@
   color: rgba(217,215,224,.8)
   transition: .4s
   cursor: pointer
-  width: 173px
 
   &:hover, &_active
     color: white
