--- a/src/components/Filters/SingleSelector/ListItem/ListItem.module.sass
+++ b/src/components/Filters/SingleSelector/ListItem/ListItem.module.sass
@@ -1,40 +1,46 @@
+@mixin defFlex
+  display: flex
+  align-items: center
+
 .item
-    display: flex
-    justify-content: space-between
-    font-size: 13px
-    line-height: 16px
-    font-weight: 500
-    color: rgba(217,215,224,.8)
+  @include defFlex
+  justify-content: space-between
+  font-size: 13px
+  line-height: 16px
+  font-weight: 500
+  color: rgba(217,215,224,.8)
+  transition: .4s
+  cursor: pointer
+
+  &:not(:first-child)
+    padding-top: 12px
+
+  &:hover, &_active
+    color: white
+
+  &:hover &__checkbox:not(&__checkbox_active)
+    opacity: .32
+
+  &__checkbox
+    @include defFlex
+    justify-content: center
+    width: 16px
+    height: 16px
+    border: 2px solid white
+    border-radius: 50%
+    opacity: 0
     transition: .4s
-    cursor: pointer
 
-    &:hover, &_active
-      color: white
-
-    &:hover &__checkbox:not(&__checkbox_active)
-      opacity: .32
-
-    &__checkbox
-      display: flex
-      align-items: center
-      justify-content: center
-      width: 16px
-      height: 16px
-      border: 2px solid white
+    & > div
+      width: 4px
+      height: 4px
+      background: white
       border-radius: 50%
       opacity: 0
-      transition: .4s
+
+    &_active
+      opacity: 1
+      color: white
 
       & > div
-        width: 4px
-        height: 4px
-        background: white
-        border-radius: 50%
-        opacity: 0
-
-      &_active
         opacity: 1
-        color: white
-
-        & > div
-          opacity: 1
