--- a/src/components/Filters/FilterTitle/FilterTitle.module.sass
+++ b/src/components/Filters/FilterTitle/FilterTitle.module.sass
@@ -9,10 +9,22 @@
   border-radius: 4px
   padding: 8px 16px
   font-weight: 500
-  overflow: hidden
-  white-space: nowrap
-  text-overflow: ellipsis
   color: white
+
+  &__text
+    display: grid
+    gap: 5px
+    width: 90%
+
+  &__filters
+    color: #a5a1b2
+    font-size: 13px
+    line-height: 16px
+    height: 16px
+    width: 100%
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
 
   &_active
     background-color: #7e798f
