--- a/src/components/Filters/MultiSelector/FilterSlider/SliderContent/SliderContent.module.sass
+++ b/src/components/Filters/MultiSelector/FilterSlider/SliderContent/SliderContent.module.sass
@@ -3,7 +3,6 @@
   justify-content: center
   align-items: center
   justify-items: center
-  width: 108px
   height: 88px
   padding: 16px 8px
   text-align: center
@@ -16,7 +15,7 @@
     background-color: #7e798f
     border-color: #7e798f
 
-  &_onlytext
+  &_text-only
     height: auto
     padding: 8px 16px
     border-radius: 32px
