feat: movie types

--- a/src/components/TopTen/TopTen.module.sass
+++ b/src/components/TopTen/TopTen.module.sass
@@ -14,12 +14,5 @@
 .slider
     overflow: visible
 
-.row
-    margin: 0 -20px
-    padding: 24px 20px
-    overflow: hidden
-
 .swiper
-    overflow: visible
-    display: flex
-    align-items: center
+    padding: 20px
