--- a/src/components/MovieInfo/MovieMedallions/MovieMedallions.module.sass
+++ b/src/components/MovieInfo/MovieMedallions/MovieMedallions.module.sass
@@ -15,6 +15,8 @@
   justify-content: center
   align-items: center
   cursor: pointer
+  min-width: 72px
+  max-width: 90px
 
   &:hover
     .medallion__wrapper
