refactor: class names

--- a/src/components/MovieInfo/MovieButtons/MovieButtons.module.sass
+++ b/src/components/MovieInfo/MovieButtons/MovieButtons.module.sass
@@ -58,7 +58,7 @@
       &:nth-child(3n-2)
         width: 100%
 
-      &_desctop
+      &_desktop
         display: none
 
 @media (max-width: 880px)
