feat: add modal window, add creators section

--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -7,6 +7,7 @@ $lineheight: 1.65 // Document Line Height
 $userfont: iviSans // User Font Family
 $systemfont: Arial,Helvetica,Helvetica Neue,FreeSans,sans-serif // System Font Family
 $background: #100e19
+$modalBackground: rgba(7, 5, 14, 0.95)
 $primaryColor: rgba(255,255,255,.48)
 
 @keyframes modalInit
@@ -17,3 +18,13 @@ $primaryColor: rgba(255,255,255,.48)
 
 @mixin modalInitAnimation
   animation: modalInit .3s 1
+
+@mixin modalPosition
+  position: fixed
+  display: flex
+  flex-direction: column
+  align-items: center
+  top: 0
+  left: 0
+  width: 100vw
+  z-index: 10
