--- a/src/components/RegistrationModal/AuthModal.module.sass
+++ b/src/components/RegistrationModal/AuthModal.module.sass
@@ -2,14 +2,7 @@
 
 .chat
   &__container
-    position: fixed
-    display: flex
-    flex-direction: column
-    align-items: center
-    top: 0
-    left: 0
     min-height: 100vh
-    width: 100vw
-    z-index: 10
-    background-color: rgba(7, 5, 14, 0.99)
+    background-color: vars.$modalBackground
+    @include vars.modalPosition
     @include vars.modalInitAnimation
