fix: header dropdown animation

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,6 +1,6 @@
 @use 'src/styles/vars'
 @mixin dropDownActive
-  transition: .3s
+  transition: .4s
 
 @mixin headerLayout
   display: flex
@@ -54,6 +54,7 @@
 
     &-exit
       opacity: 1
+      pointer-events: none
 
       &-active
         opacity: 0
