feat: add creators tab modal

--- a/src/components/Header/Navigation/Navigation.module.sass
+++ b/src/components/Header/Navigation/Navigation.module.sass
@@ -1,12 +1,16 @@
 .nav
   display: flex
+  height: 100%
   margin-left: 20px
 
   &__list
     display: flex
+    height: 100%
     gap: 16px
 
   &__item
+    display: flex
+    align-items: center
     cursor: pointer
     transition-duration: .4s
 
