--- a/src/components/MovieInfoModal/CreatorsModalList/Creators/Creators.module.sass
+++ b/src/components/MovieInfoModal/CreatorsModalList/Creators/Creators.module.sass
@@ -1,10 +1,27 @@
 .creators
   &__list
     display: flex
+    flex-wrap: wrap
+    gap: 24px
+    .movies_count
+      color: #a5a1b2
+      font-size: 13px
+      line-height: 16px
+      font-weight: 400
   &__item
     user-select: none
+    &:hover
+      .creators__name
+        color: #ffffff
   &__image
     width: 128px
     height: 128px
     border-radius: 50%
     overflow: hidden
+  &__name
+    color: #d9d7e0
+    font-size: 15px
+    line-height: 20px
+    font-weight: 500
+    transition: .3s
+
