feat: comments list modal

--- a/src/components/MobileMenu/MobileMenu.module.sass
+++ b/src/components/MobileMenu/MobileMenu.module.sass
@@ -38,31 +38,27 @@
       padding-bottom: 4px
       padding-top: 4px
       position: relative
-
+      .icon
+        @include itemLink
       &__home
         &:before
           content: "\E226"
-          @include itemLink
 
       &__catalogue
         &:before
           content: "\E07C"
-          @include itemLink
 
       &__search
         &:before
           content: "\E33D"
-          @include itemLink
 
       &__tv
         &:before
           content: "\E3A9"
-          @include itemLink
 
       &__more
         &:before
           content: "\E26A"
-          @include itemLink
 
       &__caption
         align-self: center
