--- a/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
@@ -70,46 +70,6 @@
         &_purchase
             color: #00a5ff
 
-.icons
-    display: flex
-    flex-direction: column
-    position: absolute
-    top: 20px
-    right: 20px
-    z-index: 3
-
-    &__button
-        margin-bottom: 10px
-        display: flex
-        height: 20px
-        align-items: center
-        justify-content: center
-        background: none
-        cursor: pointer
-
-    .icon
-        display: block
-        height: 20px
-        &::after
-            font-family: 'ivi-icons'
-            font-style: normal
-            font-size: 20px
-            color: #fff
-            line-height: 20px
-
-    .icon_save::after
-        content: '\E02D'
-
-    .icon_similar::after
-        content: '\E05B'
-
-    .icon_star::after
-        font-family: iconfont
-        content: "\E311"
-
-    .icon_block::after
-        content: '\E023'
-
 .information
     position: absolute
     width: 80%
@@ -166,3 +126,33 @@
         background-color: rgba(165,161,178,.32)
         border-radius: 2px
         overflow: hidden
+
+.content_related
+    &:hover
+        .content__filter
+            transform: scale(1.0001)
+
+    .button
+        display: flex
+        position: absolute
+        top: 20px
+        right: 10%
+        z-index: 4
+        height: 20px
+        align-items: center
+        justify-content: center
+        background: none
+        cursor: pointer
+
+    .icon
+        display: block
+        height: 20px
+        &::after
+            font-family: 'ivi-icons'
+            font-style: normal
+            font-size: 18px
+            color: #fff
+            line-height: 20px
+
+        &::after
+            content: '\E02D'
