refactor: add map for tooltips

--- a/src/UI/MovieCard/MovieCardDefault/MovieCardButtons/MovieCardButtons.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardButtons/MovieCardButtons.module.sass
@@ -31,7 +31,7 @@
   &_similar::after
     content: '\E05B'
 
-  &_star::after
+  &_estimate::after
     font-family: iconfont
     content: "\E311"
 
