--- a/src/components/MovieInfoModal/MovieInfoModal.module.sass
+++ b/src/components/MovieInfoModal/MovieInfoModal.module.sass
@@ -1,43 +1,67 @@
 @use '/src/styles/vars'
 .container
   @include vars.modalPosition
-  position: absolute
+  position: fixed
+  overflow-y: auto
   background-color: vars.$modalBackground
-  height: 2000px
+  height: 100%
   @include vars.modalInitAnimation
-  .content
-    width: 100%
-    max-width: 608px
-    .title
-      margin-bottom: 20px
-      font-size: 40px
-      line-height: 44px
-      font-weight: 900
-      color: #fff
-    .tabs
-      &__list
-        display: flex
-        gap: 24px
-        border-bottom: 2px solid rgba(255,255,255,.2)
-        &_wrapper
-      &__item
-        position: relative
-        cursor: pointer
-        color: #fff
-        opacity: .72
-        font-size: 15px
-        line-height: 20px
-        font-weight: 500
-        transition: .3s
-        &:hover
-          opacity: 1
-
-      &__content
-  .active
-    opacity: 1 !important
+  .header
+    display: flex
+    font-size: 15px
+    align-items: center
+    gap: 20px
+    align-self: flex-start
+    margin-left: 16px
+    margin-top: 32px
+    line-height: 20px
+    opacity: .72
+    font-weight: 500
+    cursor: pointer
+    transition: .3s
     &:before
-      content: ""
-      position: absolute
-      bottom: -2px
+      content: "\E040"
+      font-size: 20px
+      font-family: iconfont,sans-serif
+    &:hover
+      opacity: 1
+  .wrapper
+    display: flex
+    margin-top: 50px
+    .content
       width: 100%
-      border-bottom: 3px solid #ea003d
+      max-width: 608px
+      .title
+        margin-bottom: 20px
+        font-size: 40px
+        line-height: 44px
+        font-weight: 900
+        color: #fff
+      .tabs
+        &__list
+          display: flex
+          gap: 24px
+          border-bottom: 2px solid rgba(255,255,255,.2)
+          &_wrapper
+        &__item
+          position: relative
+          cursor: pointer
+          color: #fff
+          opacity: .72
+          font-size: 15px
+          line-height: 20px
+          font-weight: 500
+          transition: .3s
+          &:hover
+            opacity: 1
+
+    .active
+      opacity: 1 !important
+      &:before
+        content: ""
+        position: absolute
+        bottom: -2px
+        width: 100%
+        border-bottom: 3px solid #ea003d
+    .card
+      width: 152px
