refactor: slideshow widget

--- a/src/components/Header/HeaderWidget/WidgetBottom/WidgetBottom.module.sass
+++ b/src/components/Header/HeaderWidget/WidgetBottom/WidgetBottom.module.sass
@@ -16,6 +16,7 @@
   background-color: rgba(49,43,69,.96)
   transition: .5s
   transform: translate(0, 68px)
+  width: 100%
 
   &_active
     transform: translate(0, 0)
