fix: fix style for dropdown and header

--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -5,8 +5,9 @@
     display: flex
     justify-content: space-between
     position: absolute
-    width: 100%
+    width: calc(100% + 24px)
     z-index: 9
+    margin-left: -12px
     background: #1F1B2E
     border-radius: 0 0 15px 15px
     border-top: 1px solid rgba(255, 255, 255, .16)
