--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -12,12 +12,12 @@
 
   &__content
     display: flex
-    padding: 0 12px
     align-items: center
     justify-content: space-between
     color: vars.$primaryColor
     background: vars.$background
-    width: 100%
+    margin-inline: -12px
+    padding: 0 12px
     height: 72px
     font-size: 15px
     line-height: 20px
