--- a/src/UI/ModalInput/ModalInput.module.sass
+++ b/src/UI/ModalInput/ModalInput.module.sass
@@ -1,56 +1,66 @@
+@mixin inputFont
+  font-size: 15px
+  line-height: 20px
+
 .input
   position: absolute
   cursor: pointer
   bottom: 5px
   left: 29px
   color: #1f1b2e
-  font-size: 15px
-  line-height: 20px
+  @include inputFont
   font-weight: 700
   font-style: normal
   background-color: #e8f0fe
   width: calc(100% - 40px)
+
   &__container
     width: 290px
     margin-top: 30px
+
   &__content
     position: relative
     cursor: pointer
     width: 100%
     height: 40px
     color: #1f1b2e
-    font-size: 15px
-    line-height: 20px
+    @include inputFont
     font-weight: 500
     font-style: normal
     background-color: #e8f0fe
     border-radius: 8px
+
     &:hover
       .chat__input__icon
         &:before
           color: rgba(31, 27, 46, .50)
+
   &__error
     background-color: #fff3f0
     color: #ff8469
+
     &:hover
       .chat__input__icon
         &:before
           color: rgba(255, 84, 46, .50)
+
     input
       background-color: #fff3f0
       color: #ff542e
+
       &__placeholder
         color: inherit
+
       &__icon
         &:before
           color: rgba(255, 84, 46, .16)
+
   &__placeholder
     color: #a5a1b2
     position: absolute
     transform-origin: 0 0
     z-index: 2
-    font-size: 15px
-    line-height: 20px
+    @include inputFont
     font-weight: 500
     transition: .3s
     overflow: hidden
@@ -60,13 +70,16 @@
     pointer-events: none
     top: 10px
     left: 29px
+
   &__icon
     font-family: iconfont, sans-serif
     font-size: 16px
+
     &:before
       color: rgba(31, 27, 46, .16)
       transition: color .3s
       content: "\E050"
+
   &_block
     display: flex
     margin-left: 10px
