--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -69,3 +69,11 @@
     &:hover
       background-color: rgba(255,255,255,.16)
       border: rgba(255,255,255,.16)
+
+  &_frame
+    background: none
+    border: 1px solid rgba(255,255,255,.72)
+    color: #fff
+    &:hover
+      background: none
+      border: 1px solid #fff
