feat: add free subscribe button

--- a/src/components/Header/Actions/Actions.module.sass
+++ b/src/components/Header/Actions/Actions.module.sass
@@ -4,6 +4,13 @@
     align-items: center
     height: 100%
     gap: 20px
+    .subscription
+      width: 213px
+      height: 32px
+      font-size: 13px
+      padding: 0
+      line-height: 16px
+      font-weight: 500
 
   &__search
     display: flex
