--- a/src/components/CommentsSlider/CommentsSlider.module.sass
+++ b/src/components/CommentsSlider/CommentsSlider.module.sass
@@ -46,8 +46,8 @@
     height: 16px
     color: #a5a1b2
     position: absolute
-    top: -3px
-    right: -26px
+    top: -5px
+    left: 100%
     font-weight: 400
 
 .swiper
