fix: fix mobileMenu link system

--- a/src/components/Header/Actions/Actions.module.sass
+++ b/src/components/Header/Actions/Actions.module.sass
@@ -4,6 +4,7 @@
     align-items: center
     height: 100%
     gap: 20px
+
     .subscription
       width: 213px
       height: 32px
@@ -52,6 +53,7 @@
     svg
       width: 20px
       height: 20px
+
 @media (max-width: 600px)
-  .subscription
+  .subscription__button, .purple__button
     display: none
