feat: search modal adaptive

--- a/src/components/SearchModal/SearchModal.module.sass
+++ b/src/components/SearchModal/SearchModal.module.sass
@@ -23,3 +23,8 @@
     padding-top: 60px
     margin-inline: auto
     max-width: 66%
+
+@media screen and (max-width: 1160px)
+  .search
+    &__container
+      max-width: 80%
