feat: moved modals to new folder, add custom hook, add global variable for text color

--- a/src/UI/MovieCard/MovieCardsChart/MovieCardsChart.module.sass
+++ b/src/UI/MovieCard/MovieCardsChart/MovieCardsChart.module.sass
@@ -1,8 +1,10 @@
+@use "/src/styles/vars"
+
 .chart
   margin-bottom: 12px
   &__name
     font-size: 13px
-    color: #a5a1b2
+    color: vars.$secondaryColor
     text-transform: lowercase
     margin-bottom: 4px
 
