--- a/src/UI/TextDropDown/TextDropDown.module.sass
+++ b/src/UI/TextDropDown/TextDropDown.module.sass
@@ -1,8 +1,9 @@
+@use '/src/styles/vars'
 
 .toogle
   margin-top: 8px
   &__button
-    color: rgba(255,255,255,.48)
+    color: vars.$primaryColor
     background: none
     cursor: pointer
     font-size: 15px
