--- a/src/components/CommentsSlider/CommentsSlider.module.sass
+++ b/src/components/CommentsSlider/CommentsSlider.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .section
   position: relative
   padding: 24px 0
@@ -44,7 +46,7 @@
     white-space: nowrap
     text-overflow: ellipsis
     height: 16px
-    color: #a5a1b2
+    color: vars.$secondaryColor
     position: absolute
     top: -5px
     left: 100%
