--- a/src/components/Filters/FilterTitle/FilterTitle.module.sass
+++ b/src/components/Filters/FilterTitle/FilterTitle.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .title
   display: flex
   align-items: center
@@ -17,7 +19,7 @@
     width: 90%
 
   &__filters
-    color: #a5a1b2
+    color: vars.$secondaryColor
     font-size: 13px
     line-height: 16px
     height: 16px
