--- a/src/components/Footer/FooterCopyright/FooterCopyright.module.sass
+++ b/src/components/Footer/FooterCopyright/FooterCopyright.module.sass
@@ -1,8 +1,10 @@
+@use '/src/styles/vars'
+
 .copyright
   margin-block: 32px 48px
   font-size: 15px
   line-height: 20px
-  color: rgba(255,255,255,.48)
+  color: vars.$primaryColor
 
 @media (0 < width < 1159px)
   .copyright
