--- a/src/components/Footer/FooterWidget/FooterWidget.module.sass
+++ b/src/components/Footer/FooterWidget/FooterWidget.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 $start: #A869F0
 $end: #834CC2
 
@@ -34,5 +36,5 @@ $end: #834CC2
     line-height: 20px
     font-weight: 400
     font-style: normal
-    color: #a5a1b2
+    color: vars.$secondaryColor
     text-align: center
