--- a/src/components/ModalWindows/AuthModal/ChatDialogue/PrivacyPolicy/PrivacyPolicy.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/PrivacyPolicy/PrivacyPolicy.module.sass
@@ -1,7 +1,9 @@
+@use "/src/styles/vars"
+
 .privacy_policy
   margin-top: 25px
   font-size: 13px
-  color: #a5a1b2
+  color: vars.$secondaryColor
 
   &__link
     box-shadow: 0 2px 0 #7e798f, inset 0 0 0 #7e798f
