--- a/src/components/ModalWindows/MovieInfoModal/CreatorsModalList/Creators/Creators.module.sass
+++ b/src/components/ModalWindows/MovieInfoModal/CreatorsModalList/Creators/Creators.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .creators
   &__list
     display: flex
@@ -5,7 +7,7 @@
     gap: 24px
 
     .movies_count
-      color: #a5a1b2
+      color: vars.$secondaryColor
       font-size: 13px
       line-height: 16px
       font-weight: 400
