--- a/src/components/ModalWindows/SearchModal/SearchPlaceholder/SearchPlaceholder.module.sass
+++ b/src/components/ModalWindows/SearchModal/SearchPlaceholder/SearchPlaceholder.module.sass
@@ -1,5 +1,7 @@
+@use "/src/styles/vars"
+
 .placeholder
-  color: #a5a1b2
+  color: vars.$secondaryColor
   position: absolute
   transform-origin: 0 0
   font-size: 15px
