--- a/src/components/Sorting/Sorting.module.sass
+++ b/src/components/Sorting/Sorting.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .sorting
   position: relative
   width: fit-content
@@ -27,4 +29,4 @@
     padding-inline: 20px 16px
     font-size: 15px
     line-height: 20px
-    color: #a5a1b2
+    color: vars.$secondaryColor
