--- a/src/components/WatchAllDevices/WatchAllDevices.module.sass
+++ b/src/components/WatchAllDevices/WatchAllDevices.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .wrapper
   padding: 24px 0
   display: flex
@@ -22,7 +24,7 @@
       line-height: 20px
       font-weight: 400
       font-style: normal
-      color: #a5a1b2
+      color: vars.$secondaryColor
       margin-bottom: 24px
 
     .button
