--- a/src/UI/ModalInput/ModalInput.module.sass
+++ b/src/UI/ModalInput/ModalInput.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 @mixin inputFont
   font-size: 15px
   line-height: 20px
@@ -56,7 +58,7 @@
           color: rgba(255, 84, 46, .16)
 
   &__placeholder
-    color: #a5a1b2
+    color: vars.$secondaryColor
     position: absolute
     transform-origin: 0 0
     z-index: 2
