--- a/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
@@ -1,3 +1,4 @@
+@use "/src/styles/vars"
 
 .link
     display: block
@@ -116,7 +117,7 @@
     margin-bottom: 12px
     &__name
         font-size: 13px
-        color: #a5a1b2
+        color: vars.$secondaryColor
         text-transform: lowercase
         margin-bottom: 4px
 
