--- a/src/UI/MovieCard/MovieCardPoster/MovieCardPoster.module.sass
+++ b/src/UI/MovieCard/MovieCardPoster/MovieCardPoster.module.sass
@@ -1,4 +1,4 @@
-@use '../../../styles/vars'
+@use "/src/styles/vars"
 
 .link
     display: block
@@ -42,7 +42,7 @@
     &__text
         font-size: 13px
         margin-top: 8px
-        color: #a5a1b2
+        color: vars.$secondaryColor
         line-height: 16px
         display: flex
         align-items: center
@@ -77,7 +77,7 @@
     margin-bottom: 12px
     &__name
         font-size: 13px
-        color: #a5a1b2
+        color: vars.$secondaryColor
         text-transform: lowercase
         margin-bottom: 4px
 
