--- a/src/components/CinemaDetails/CinemaDetails.module.sass
+++ b/src/components/CinemaDetails/CinemaDetails.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .section
     padding: 24px 0
     &__container
@@ -22,7 +24,7 @@
         margin-left: 12px
         padding-left: 16px
         position: relative
-        color: #a5a1b2
+        color: vars.$secondaryColor
         margin-top: 8px
 
         &::before
@@ -32,7 +34,7 @@
             width: 6px
             height: 6px
             border-radius: 100%
-            background: #a5a1b2
+            background: vars.$secondaryColor
             left: 0
             top: 11px
 
@@ -40,7 +42,7 @@
     margin-top: 12px
 
     &__paragraph
-        color: #a5a1b2
+        color: vars.$secondaryColor
         margin-top: 8px
 
         &:first-child
