--- a/src/components/CreatorsList/CreatorsList.module.sass
+++ b/src/components/CreatorsList/CreatorsList.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .container
   padding: 24px 0
   display: flex
@@ -32,7 +34,7 @@
         transition: .2s
 
       .subtitle
-        color: #a5a1b2
+        color: vars.$secondaryColor
         font-size: 13px
         line-height: 16px
         font-weight: 400
@@ -47,7 +49,7 @@
     cursor: pointer
     user-select: none
     font-weight: 500
-    color: #a5a1b2
+    color: vars.$secondaryColor
     font-size: 15px
     line-height: 88px
     text-align: center
