--- a/src/components/Footer/FooterLink/FooterLink.module.sass
+++ b/src/components/Footer/FooterLink/FooterLink.module.sass
@@ -1,6 +1,8 @@
+@use '/src/styles/vars'
+
 .link
   display: block
-  color: rgba(255,255,255,.48)
+  color: vars.$primaryColor
   transition-duration: .4s
   transition-property: color,box-shadow,opacity
 
