--- a/src/components/Header/DropDown/SubscriptionDropdown/SubscriptionDropdown.module.sass
+++ b/src/components/Header/DropDown/SubscriptionDropdown/SubscriptionDropdown.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .container
   display: flex
   width: 100%
@@ -24,7 +26,7 @@
     align-items: center
 
     .hint
-      color: #a5a1b2
+      color: vars.$secondaryColor
       font-size: 13px
       line-height: 16px
 
