feat: add translation to movieInfo modal

--- a/src/components/ModalWindows/MovieInfoModal/CreatorsModalList/Creators/Creators.module.sass
+++ b/src/components/ModalWindows/MovieInfoModal/CreatorsModalList/Creators/Creators.module.sass
@@ -6,6 +6,9 @@
     flex-wrap: wrap
     gap: 24px
 
+    .button
+      width: 100%
+
     .movies_count
       color: vars.$secondaryColor
       font-size: 13px
