--- a/src/components/Header/Actions/Actions.module.sass
+++ b/src/components/Header/Actions/Actions.module.sass
@@ -6,12 +6,13 @@
     gap: 20px
 
     .subscription
-      width: 213px
-      height: 32px
-      font-size: 13px
-      padding: 0
-      line-height: 16px
-      font-weight: 500
+      &__button
+        width: 213px
+        height: 32px
+        font-size: 13px
+        padding: 0
+        line-height: 16px
+        font-weight: 500
 
   &__search
     display: flex
