--- a/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
+++ b/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
@@ -47,6 +47,9 @@
           gap: 24px
           border-bottom: 2px solid rgba(255, 255, 255, .2)
 
+        &__content
+          margin-bottom: 600px
+
         &__item
           position: relative
           cursor: pointer
