feat: mobile version breadcrumbs

--- a/src/UI/SliderButtons/SliderButtons.module.sass
+++ b/src/UI/SliderButtons/SliderButtons.module.sass
@@ -55,6 +55,13 @@
         .button__icon_prev
             transform: scale(.6)
 
+@media (max-width: 1350px)
+    .button_next
+        right: -26px
+
+    .button_prev
+        left: -26px
+
 @media (max-width: 600px)
     .button__icon::after
         font-size: 20px
