--- a/src/components/MovieInfo/MovieMedallions/MovieMedallions.module.sass
+++ b/src/components/MovieInfo/MovieMedallions/MovieMedallions.module.sass
@@ -63,8 +63,9 @@
 
 @media (max-width: 600px)
   .medallion
+    min-width: 62px
     max-width: 72px
-    min-height: 72px
+    height: 72px
     &__wrapper
       width: 44px
       height: 44px
@@ -80,6 +81,7 @@
 
   .medallions
     height: 72px
+    padding: 0
 
 @media (max-width: 510px)
   .medallions
