--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -49,4 +49,8 @@ button
   user-select: none
 
 #__next
-  overflow-x: hidden 
+  overflow-x: hidden
+
+@media (max-width: 880px)
+  .container
+    padding: 0 24px
