fix: overflow hidden outher section

--- a/src/components/MovieInfo/MovieInfoDesktop/MovieInfoDesktop.module.sass
+++ b/src/components/MovieInfo/MovieInfoDesktop/MovieInfoDesktop.module.sass
@@ -1,7 +1,9 @@
 .desktop
   padding: 24px 0
-  display: flex
-  justify-content: space-between
+
+  &__row
+    display: flex
+    justify-content: space-between
 
 .content
   width: 37.5%
