--- a/src/UI/ProgressBar/ProgressBar.module.sass
+++ b/src/UI/ProgressBar/ProgressBar.module.sass
@@ -3,7 +3,9 @@
   height: 2px
   background-color: rgba(165,161,178,.32)
   border-radius: 1px
+  transition: .3s
 
 .value
   height: 100%
   background-color: #ea003d
+  transition: .3s
