--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -14,6 +14,13 @@ body
   background-color: #100e19
   -webkit-font-smoothing: antialiased
 
+::placeholder
+  color: #666
+
+::selection
+  background-color: vars.$accent
+  color: #fff
+
 ul
   list-style: none
 
@@ -45,6 +52,7 @@ a
 .container
   padding: 0 32px
   max-width: 1280px
+  width: 100%
   margin: 0 auto
 
 .unselectable
