--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -63,6 +63,21 @@ a
   -ms-user-select: none
   user-select: none
 
+.tippy-box
+  background: none
+  .tippy-content
+    border-radius: 6px
+    font-size: 13px
+    line-height: 16px
+    background-color: #1f1b2e
+    border-radius: 6px
+    padding: 6px 8px
+    margin-left: -5px
+
+  .tippy-arrow
+    background-color: #1f1b2e
+    color: #1f1b2e
+
 @media (max-width: 880px)
   .container
     padding: 0 24px
