--- a/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
+++ b/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
@@ -31,8 +31,7 @@
     margin-top: 50px
 
     .content
-      width: 100%
-      max-width: 608px
+      width: 608px
 
       .title
         margin-bottom: 20px
@@ -76,3 +75,10 @@
     .card
       margin-left: 100px
       width: 152px
+
+
+@media (max-width: 1160px)
+  .wrapper
+    width: 100%
+    padding: 30px
+    justify-content: space-between
