feat: add Switch language to header

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -35,11 +35,11 @@
     line-height: 16px
     height: 32px
     padding: 7px 11px
-    background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
+    background: linear-gradient(270deg, #ea003d 0, #c447ff 100%)
     border: none
 
     &:hover, &:focus-visible
-      background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
+      background: linear-gradient(270deg, #ea003d 0, #c447ff 100%)
       border: none
 
   &_red
@@ -63,17 +63,19 @@
     padding: 0
 
   &_dark
-    background-color: rgba(255,255,255,.08)
-    border: rgba(255,255,255,.08)
+    background-color: rgba(255, 255, 255, .08)
+    border: rgba(255, 255, 255, .08)
     color: vars.$textcolor
+
     &:hover
-      background-color: rgba(255,255,255,.16)
-      border: rgba(255,255,255,.16)
+      background-color: rgba(255, 255, 255, .16)
+      border: rgba(255, 255, 255, .16)
 
   &_frame
     background: none
-    border: 1px solid rgba(255,255,255,.32)
+    border: 1px solid rgba(255, 255, 255, .32)
     color: #fff
+
     &:hover
       background: none
       border: 1px solid #fff
