--- a/src/components/Layout/Header/Actions/Actions.module.sass
+++ b/src/components/Layout/Header/Actions/Actions.module.sass
@@ -1,59 +1,56 @@
-.actions
-  &__container
-    display: flex
-    align-items: center
-    height: 100%
-    gap: 20px
+.container
+  display: flex
+  align-items: center
+  height: 100%
+  gap: 20px
 
-    .subscription
-      &__button
-        width: 213px
-        height: 32px
-        font-size: 13px
-        padding: 0
-        line-height: 16px
-        font-weight: 500
+  .subscription__button
+    width: 213px
+    height: 32px
+    font-size: 13px
+    padding: 0
+    line-height: 16px
+    font-weight: 500
 
-  &__search
-    display: flex
-    gap: 5px
-    cursor: pointer
-    transition: .4s
+.search
+  display: flex
+  gap: 5px
+  cursor: pointer
+  transition: .4s
 
-    &:hover
-      color: #fff
+  &:hover
+    color: #fff
 
-    .search
-      &__icon
-        width: 24px
-        height: 24px
+  .icon
+    width: 24px
+    height: 24px
 
-  &__notifications
-    cursor: pointer
-    transition: .4s
+.notifications
+  cursor: pointer
+  transition: .4s
 
-    &:hover
-      color: #fff
+  &:hover
+    color: #fff
 
-    svg
-      width: 24px
-      height: 24px
+  svg
+    width: 24px
+    height: 24px
 
-  &__profile
-    cursor: pointer
-    height: 48px
-    border-radius: 8px
-    border: 2px solid rgba(255, 255, 255, .48)
-    padding: 12px
-    transition: .4s
+.profile
+  cursor: pointer
+  height: 48px
+  border-radius: 8px
+  border: 2px solid rgba(255, 255, 255, .48)
+  padding: 12px
+  transition: .4s
 
-    &:hover
-      color: #fff
-      border-color: #fff
+  &:hover
+    color: #fff
+    border-color: #fff
 
-    svg
-      width: 20px
-      height: 20px
+  svg
+    width: 20px
+    height: 20px
 
 @media (max-width: 600px)
   .subscription__button, .purple__button
