--- a/src/components/Layout/Header/Header.module.sass
+++ b/src/components/Layout/Header/Header.module.sass
@@ -33,7 +33,13 @@
 
   &__action
     &_layout
+      position: relative
       @include headerLayout
+
+      .switch
+        position: absolute
+        right: 350px
+        bottom: 8px
 
   &__navigation
     @include headerLayout
@@ -59,3 +65,13 @@
       &-active
         opacity: 0
         @include dropDownActive
+
+@media (max-width: 1160px)
+  .header__action_layout
+    .switch
+      right: 260px
+
+@media (max-width: 600px)
+  .header__action_layout
+    .switch
+      right: 100px
