--- a/src/UI/ToggleSwitch/ToggleSwitch.module.sass
+++ b/src/UI/ToggleSwitch/ToggleSwitch.module.sass
@@ -39,6 +39,7 @@
     height: 45px
     border-radius: 45px
     transition: 0.2s
+    opacity: 0.15
     background: #fff
     box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29)
 
