feat: split chatDialogue to smaller components

--- a/src/components/ModalWindows/AuthModal/ChatDialogue/ErrorMessage/ErrorMessage.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/ErrorMessage/ErrorMessage.module.sass
@@ -1,27 +1,30 @@
-.chat__error
-  display: flex
-  margin-top: 30px
-  width: 100%
-  background-color: #ff542e
-  padding: 12px 12px 12px
-  border-radius: 4px
+.container
+  width: 80%
 
-  .error
-    &__title
-      color: #fff
-      font-size: 16px
-      line-height: 20px
-      font-weight: 700
+  .chat__error
+    display: flex
+    margin-top: 30px
+    width: 100%
+    background-color: #ff542e
+    padding: 12px 12px 12px
+    border-radius: 4px
 
-    &__text
-      color: #ffbaab
-      font-size: 13px
-      line-height: 16px
-      font-weight: 400
+    .error
+      &__title
+        color: #fff
+        font-size: 16px
+        line-height: 20px
+        font-weight: 700
 
-    &__icon
-      svg
-        width: 32px
-        height: 32px
+      &__text
+        color: #ffbaab
+        font-size: 13px
+        line-height: 16px
+        font-weight: 400
+
+      &__icon
+        svg
+          width: 32px
+          height: 32px
 
 
